apps/oxlint/src/snapshots/fixtures__cli__auto_config_parse_error_debugger.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: debugger.js
working directory: fixtures/cli/auto_config_parse_error
----------
Failed to parse oxlint configuration file at <cwd>/fixtures/cli/auto_config_parse_error/.oxlintrc.json.

  x expected `:` at line 2 column 11

----------
CLI result: InvalidOptionConfig
----------
