apps/oxlint/src/snapshots/fixtures__cli__disable_directive_issue_13311_test.jsx test2.d.ts@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: test.jsx test2.d.ts
working directory: fixtures/cli/disable_directive_issue_13311
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 2 files with 3 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
