apps/oxlint/src/snapshots/fixtures__cli__disable_vitest_rules_-c .oxlintrc-vitest.json --report-unused-disable-directives test.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: -c .oxlintrc-vitest.json --report-unused-disable-directives test.js
working directory: fixtures/cli/disable_vitest_rules
----------

  x vitest(no-restricted-vi-methods): Use of `advanceTimersByTime` is not allowed
   ,-[test.js:7:6]
 6 | it('calls the callback after 1 second via advanceTimersByTime', () => {
 7 |   vi.advanceTimersByTime(1000);
   :      ^^^^^^^^^^^^^^^^^^^
 8 | })
   `----

  ! Unused oxlint-disable directive (no problems were reported from vitest/no-restricted-vi-methods).
    ,-[test.js:19:31]
 18 |   // This one should trigger a warning about an unnecessary disable:
 19 |   // oxlint-disable-next-line vitest/no-restricted-vi-methods
    :                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 20 |   video.play();
    `----

Found 1 warning and 1 error.
Finished in <variable>ms on 1 file with 1 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
